--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 :root {
     /*font-family*/
-    font-family: sans-serif;
+    font-family: "roboto", sans-serif;
     /*color schemes */
     --color-main :#22d3ee ;
     --color-secondary:#fde047 ;
@@ -15,6 +15,8 @@
     /*font-sizes */
     --h1-text : 2em ;
     --nav-text : 1.5em;
+    --h2-text : 1.35em;
+    --h3-text : 1.2em;
     
 
 }
@@ -66,6 +68,10 @@ body {
     list-style-type: none;
 }
 
+.sidebar ul a:hover{
+    text-decoration: underline;
+}
+
 /*title */
 
 
@@ -104,7 +110,118 @@ h1 .title-text {
 /*layout for the header section -----------------------------------*/
 .header{
     display: grid;
+    gap: 10px;
     grid-template-columns: 2fr 1fr ;
     grid-template-rows:  1fr 1fr ;
+    padding: 40px 30px;
 }
 
+/*search bar part*/
+.search-container {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.search-container .search-button{
+    -webkit-mask-size: cover;
+    mask-size: cover;
+    -webkit-mask-image: url(./images/magnify.svg);
+    mask-image: url(./images/magnify.svg);
+    background-color: black;
+    width: 2em;
+    height: 2em;
+    cursor: pointer;
+}
+
+.search-input {
+    border-radius: 50px;
+    flex-grow: 1;
+    height: 2em;
+    border: none;
+    background-color : var(--color-tertiary);
+
+    padding: 5px 10px;
+}
+/*----*/
+
+/*alert part */ 
+
+.alert-container {
+    display : flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+
+}
+
+.alert-container .alert-button{
+    -webkit-mask-size: cover;
+    mask-size: cover;
+    -webkit-mask-image: url(./images/bell-outline.svg);
+    mask-image: url(./images/bell-outline.svg);
+    background-color: black;
+    width: 2em;
+    height: 2em;
+    cursor: pointer;
+}
+
+.profile-picture-small {
+    border-radius: 50%;
+
+    height: 50px;
+    width: 50px;
+}
+
+/*salutation part */ 
+
+.salutation-container{
+    display: flex;
+
+    gap: 10px;
+
+}
+
+.profile-picture-big{
+   
+    border-radius: 50%;
+    width: 75px;
+    height: 75;
+}
+
+.salutation {
+   
+    grid-row : 1 / 2;
+    font-size: var(--regular-text);
+}
+
+.user-name-big {
+    
+    grid-row: 2 / 3 ;
+    font-size: var(--h1-text);
+}
+
+/*action part */
+
+.actions-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+
+.button-main {
+    padding:  10px 20px ;
+    border-radius: 50px;
+    border: 3px solid var(--color-main);
+    background-color: var(--color-main);
+    color: white;
+    font-size: var(--button-text);
+}
+
+.button-main:hover{
+    background-color: white;
+    color: var(--color-main);
+}
