--- a/style.css
+++ b/style.css
@@ -8,9 +8,9 @@
     /*font-family*/
     font-family: "roboto", sans-serif;
     /*color schemes */
-    --color-main :#22d3ee ;
-    --color-secondary:#fde047 ;
-    --color-tertiary : #d6d3d1;
+    --color-main :#1C93D3 ;
+    --color-secondary:#DFAE32 ;
+    --color-tertiary : #E2E9EF;
 
     /*font-sizes */
     --h1-text : 2em ;
@@ -224,4 +224,64 @@ h1 .title-text {
 .button-main:hover{
     background-color: white;
     color: var(--color-main);
+}
+
+
+/* main -----------------------------------------*/
+
+.main {
+    padding: 20px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    background-color: var(--color-tertiary);
+}
+
+
+.your-projects {
+    grid-column: 1 / 3;
+    
+}
+
+.your-projects h2 {
+    margin-bottom: 10px;
+}
+
+.project-card-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr ;
+    gap: 20px;
+}
+
+.project-card {
+    border-radius: 10px;
+    background-color: aliceblue;
+    padding: 20px;
+    border-left: #DFAE32 solid 7px;
+
+}
+.project-card > .project-title {
+    margin-bottom: 5px;
+}
+   
+
+.project-card > .project-description {
+    margin-bottom: 25px;
+}
+
+.buttons-container {
+   text-align: end;
+
+}
+.button-icon {
+    background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
+
+.button-icon img{
+    fill: black;
 }
