Finish basic version of an admin dashboard

--- a/style.css
+++ b/style.css
@@ -234,11 +234,13 @@ h1 .title-text {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     background-color: var(--color-tertiary);
+    gap: 20px;
 }
 
-
+/*your -projects */
 .your-projects {
     grid-column: 1 / 3;
+    height: 100%;
     
 }
 
@@ -247,6 +249,7 @@ h1 .title-text {
 }
 
 .project-card-container {
+    
     display: grid;
     grid-template-columns: 1fr 1fr ;
     gap: 20px;
@@ -284,4 +287,56 @@ h1 .title-text {
 
 .button-icon img{
     fill: black;
+}
+
+/* announcements - trending */ 
+
+.announcement-trending {
+    display: grid;
+    grid-template-rows: 1fr 1fr ;
+    gap: 20px;
+}
+
+.announcements,.trending {
+    border-radius: 10px;
+    background-color:aliceblue;
+    padding: 20px;
+}
+
+.announcements h2,
+.trending h2 {
+    margin-bottom: 20px;
+}
+ 
+.announcement-card {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    border-bottom: solid black 1px;
+}
+
+/* Trending */
+
+.trend-card {
+    display: grid;
+    justify-content: center;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto auto;
+    column-gap : 20px;
+    margin-bottom: 20px;
+}
+
+.profile-picture-small{
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;
+}
+
+.author-name {
+    grid-column:  2 / 3 ;
+    grid-row: 1 / 2;
+}
+
+
+.trend-title {
+    grid-column: 2 / 3;
+    grid-row : 2 / 3
 }
