--- a/style.css
+++ b/style.css
@@ -317,26 +317,9 @@ h1 .title-text {
 /* Trending */
 
 .trend-card {
-    display: grid;
-    justify-content: center;
-    grid-template-columns: auto auto;
-    grid-template-rows: auto auto;
-    column-gap : 20px;
+    display: flex;
+    gap: 20px;
     margin-bottom: 20px;
 }
 
-.profile-picture-small{
-    grid-column: 1 / 2;
-    grid-row: 1 / 3;
-}
 
-.author-name {
-    grid-column:  2 / 3 ;
-    grid-row: 1 / 2;
-}
-
-
-.trend-title {
-    grid-column: 2 / 3;
-    grid-row : 2 / 3
-}
